--- a/prod.yml
+++ b/prod.yml
@@ -1,7 +1,7 @@
 version: "3.0"
 services:
-  dockerapp:
-    image: jleetutorial/dockerapp
+  dockerapp1:
+    image: sangam14/dockerapp1
     ports:
       - "5000:5000"
     depends_on:
